--- a/index.html
+++ b/index.html
@@ -11,11 +11,46 @@
       content="default-src 'self'; script-src 'self'"
     />
     <title>Hello from Electron renderer!</title>
+    <style>
+      /* Loading 動畫樣式 */
+      .loading-spinner {
+        border: 4px solid #f3f3f3;
+        border-top: 4px solid #3498db;
+        border-radius: 50%;
+        width: 20px;
+        height: 20px;
+        animation: spin 1s linear infinite;
+        margin-left: 10px;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
   </head>
   <body>
     <h1>Hello from Electron renderer!</h1>
     <p>👋</p>
     <p id="info"></p>
+
+    <form id="orderForm">
+      <label for="name">點餐者：</label>
+      <input type="text" id="name" name="name" required /><br /><br />
+
+      <label for="meal">點餐內容：</label>
+      <input type="text" id="meal" name="meal" required /><br /><br />
+
+      <label for="extra">額外選項：不加辣，不加香菜 …（可選）：</label>
+      <input type="text" id="extra" name="extra" /><br /><br />
+      <div class="loading-spinner" id="loading-spinner"></div>
+      <button type="button" id="submit-btn">提交訂單</button>
+      <p id="submit-msg"></p>
+    </form>
   </body>
   <script src="./renderer.js"></script>
 </html>
