--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <label for="extra">額外選項：不加辣，不加香菜 …（可選）：</label>
       <input type="text" id="extra" name="extra" /><br /><br />
       <div class="loading-spinner" id="loading-spinner"></div>
-      <button type="button" id="submit-btn">提交訂單</button>
+      <button type="submit" id="submit-btn">提交訂單</button>
       <p id="submit-msg"></p>
     </form>
   </body>
